# ic-solana

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  canister_ids.json  deploy.sh  dfx.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  solana_rpc.did  test_whoami.sh  vetkd_system_api.did
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  rust.yml
candid/: solana_rpc.did
scripts/: bootstrap  build  did  docker-build  e2e  examples  fetch-pocket-ic  version
src/: cluster.rs  commitment.rs  config.rs  constants.rs  eddsa_api.rs  keypair.rs  lib.rs  logs.rs  main.rs  request.rs  response.rs  rpc_client.rs  state.rs  types.rs  utils.rs
src/app_backend/: Cargo.toml  app_backend.did
src/app_backend/src/: lib.rs
src/app_backend/test/: run_tests.sh
src/common/: Cargo.toml
src/common/src/: logs.rs  metrics.rs
src/e2e/: Cargo.toml  e2e.did
src/e2e/src/: lib.rs
src/ic-solana/: Cargo.toml
src/ic-solana-provider/: Cargo.toml  ic-solana-provider.did
src/ic-solana-provider/src/: auth.rs  constants.rs  eddsa_api.rs  http.rs  lib.rs  logs.rs  memory.rs  providers.rs  state.rs  types.rs  utils.rs
src/ic-solana-provider/tests/: common.rs  generic_methods_tests.rs  integration_tests.rs  methods_mock_tests.rs  methods_tests.rs
src/ic-solana-rpc/: Cargo.toml  ic-solana-rpc.did
src/ic-solana-rpc/src/: auth.rs  constants.rs  http.rs  lib.rs  main.rs  memory.rs  providers.rs  state.rs  types.rs  utils.rs
src/ic-solana-rpc/tests/: setup.rs  tests.rs
src/ic-solana-rpc/tests/setup/: mock.rs  mod.rs  utils.rs
src/ic-solana-wallet/: Cargo.toml  ic-solana-wallet.did
src/ic-solana-wallet/src/: eddsa.rs  lib.rs  main.rs  state.rs  types.rs  utils.rs
src/ic-solana-wallet/tests/: common.rs  setup.rs  test.rs  tests.rs
src/ic-solana/src/: constants.rs  lib.rs  logs.rs  metrics.rs  request.rs  response.rs  rpc_client.rs  rpc_result.rs  types.rs
src/ic-solana/src/rpc_client/: compression.rs  multi_call.rs  types.rs
src/ic-solana/src/types/: account.rs  block.rs  blockhash.rs  candid_value.rs  cluster.rs  commitment.rs  compiled_keys.rs  config.rs  epoch.rs  epoch_info.rs  fees.rs  filter.rs  instruction.rs  message.rs  mod.rs  pubkey.rs  response.rs  result.rs  reward.rs  signature.rs  tagged.rs  transaction.rs  transaction_error.rs
src/ic-solana/src/utils/: mod.rs  short_vec.rs
src/system_api/: Cargo.toml
src/test-utils/: Cargo.toml
src/test-utils/src/: lib.rs  mock.rs  utils.rs
src/test_canister/: Cargo.toml
src/test_canister/src/: lib.rs
src/types/: account.rs  compiled_keys.rs  config.rs  epoch_info.rs  fee_calculator.rs  fees_info.rs  instruction.rs  instruction_error.rs  message.rs  mod.rs  pubkey.rs  signature.rs  transaction.rs  transaction_error.rs
src/utils/: mod.rs  option_serializer.rs  short_vec.rs
