[workspace]
resolver = "2"
members = [
    "src/common",
    "src/ic-solana",
    "src/ic-solana-provider",
    "src/test_canister",
]

[workspace.package]
version = "0.1.0"
description = "Interact with Solana blockchain from the Internet Computer."
keywords = ["dfinity", "icp", "web3", "solana", "rpc"]
authors = [
    "Vladyslav Korniienko <vk.tiamo@gmail.com>",
    "mFactory Team (https://mfactory.tech)"
]
homepage = "https://github.com/mfactory-lab/ic-solana"
repository = "https://github.com/mfactory-lab/ic-solana"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
candid = { version = "0.10" }
ic-cdk = "0.14"
ic-types = "0.7"
ic-canister-log = "0.2"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", package = "ic-canisters-http-types" }
ic-crypto-ed25519 = { git = "https://github.com/dfinity/ic", package = "ic-crypto-ed25519" }
ic-management-canister-types = { git = "https://github.com/dfinity/ic", package = "ic-management-canister-types" }
#ic-state-machine-tests = { git = "https://github.com/dfinity/ic", package = "ic-state-machine-tests" }
ic-solana = { path = "./src/ic-solana" }
ic-solana-provider = { path = "./src/ic-solana-provider" }
pocket-ic = "3.1.0"
serde = "1"
serde_json = "^1.0.117"
serde_bytes = "^0.11.14"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

# Required by `ic-test-utilities-load-wasm`
[profile.canister-release]
inherits = "release"

# This patch is needed due to version conflicts around the zeroize crate
# More info: https://github.com/solana-labs/solana/blob/master/Cargo.toml#L514
[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
