[workspace]
resolver = "2"
members = [
    "src/common",
    "src/ic-solana",
    "src/ic-solana-provider",
    "src/test_canister",
]

[workspace.package]
version = "0.1.0"
description = "Interact with Solana blockchain from the Internet Computer."
keywords = ["dfinity", "icp", "web3", "solana", "rpc"]
authors = [
    "Vladyslav Korniienko <vk.tiamo@gmail.com>",
    "mFactory Team (https://mfactory.tech)",
]
homepage = "https://github.com/mfactory-lab/ic-solana"
repository = "https://github.com/mfactory-lab/ic-solana"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
# Core IC dependencies
candid = "0.10"
ic-cdk = "0.16"
ic-types = "0.7"
ic-canister-log = "0.2"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", package = "ic-canisters-http-types" }
ic-crypto-ed25519 = { git = "https://github.com/dfinity/ic", package = "ic-crypto-ed25519" }
ic-management-canister-types = { git = "https://github.com/dfinity/ic", package = "ic-management-canister-types" }
ic-metrics-encoder = "1.1"
ic-stable-structures = "0.6.5"

# Project-specific dependencies
ic-solana = { path = "src/ic-solana" }
ic-solana-common = { path = "src/common" }
ic-solana-provider = { path = "src/ic-solana-provider" }

# Additional utilities
pocket-ic = "5.0.0"
serde = "1"
serde_json = "1.0"
serde_bytes = "0.11"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

# Required by `ic-test-utilities-load-wasm`
[profile.canister-release]
inherits = "release"


[patch.crates-io]
pocket-ic = { git = "https://github.com/dfinity/ic.git", rev = "afe1a18" }
