[package]
name = "app_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.43"
#ed25519-dalek = "=1.0.1"
ed25519-compact = { version = "2", default-features = false }
candid = "0.8.4"
ic-cdk = "0.7.1"
ic-crypto-internal-bls12-381-vetkd = { git = "https://github.com/dfinity/ic" }
ic-crypto-internal-bls12-381-type = { git = "https://github.com/dfinity/ic" }
hex = "0.4"
ic-cdk-macros = "0.8.1"
ic-types = "0.7.0"
lazy_static = "1.4.*"
serde = "1"
serde_json = "1.0.93"
serde_bytes = "0.11.9"
sha2 = "0.10.2"
zeroize = "^1.4"
#solana-sdk = { version = "1.17.4" }
