[package]
name = "ic-solana-provider"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-solana = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
bincode = "1.3.3"
flate2 = "1.0.24"
pocket-ic = { workspace = true }
rand = "0.8.5"
solana-sdk = "1.18.8"
