[package]
name = "ic-solana-provider"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-canister-log = { workspace = true }
ic-canisters-http-types = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-stable-structures = { workspace = true }
ic-solana-common = { workspace = true }
ic-solana = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
url = "2.5.0"

[dev-dependencies]
anyhow = "1.0.40"
bincode = "1.3.3"
flate2 = "1.0.24"
pocket-ic = { workspace = true }
rand = "0.8.5"
solana-sdk = "2.0"
solana-client = "2.0"
ctor = "0.2.8"
lazy_static = "1.5"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
ic-agent = "0.38.1"
ic-utils = "0.38.1"
ring = "0.17.8"
