[package]
name = "ic-solana-rpc"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-canister-log = { workspace = true }
ic-canisters-http-types = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-solana = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
bincode = "1.3.3"
flate2 = "1.0.24"
pocket-ic = { workspace = true }
rand = "0.8.5"
ring = "0.17"
solana-sdk = "2.0"
solana-client = "2.0"
ctor = "0.2.8"
lazy_static = "1.5"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
ic-agent = { workspace = true, features = ["ring"] }
ic-utils = { workspace = true }
ic-test-utilities-load-wasm = { workspace = true }

