[package]
name = "ic-solana-rpc"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-canister-log = { workspace = true }
ic-canisters-http-types = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-solana = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pocket-ic = { workspace = true }
#solana-sdk = "2.0"
#solana-client = "2.0"
ic-test-utilities-load-wasm = { workspace = true }
serde_bytes = { workspace = true }
test-utils = { workspace = true }
