[package]
name = "ic-solana-wallet"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-canister-log = { workspace = true }
ic-canisters-http-types = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-stable-structures = { workspace = true }
ic-solana-common = { workspace = true }
ic-solana = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
url = "2.5.0"
hex = "0.4.3"
