[package]
name = "ic-solana"
description = "Interact with Solana blockchain from the Internet Computer."
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
candid = { workspace = true }
getrandom = { version = "0.2", features = ["custom"] }
ic-solana-common = { workspace = true }
ic-canister-log = { workspace = true }
ic-cdk = { workspace = true }
ic-crypto-ed25519 = { workspace = true }
ic-sha3 = "1.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
serde-big-array = "0.5.1"
thiserror = "^1.0.61"
url = "2.5.0"
futures = "0.3.31"
