[package]
name = "ic-solana"
description = "Interact with Solana blockchain from the Internet Computer."
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bincode = "1.3.3"
bs58 = "0.5.1"
candid = { workspace = true }
flate2 = "1.0"
futures = { workspace = true }
getrandom = { version = "0.2", features = ["custom"] }
ic-canister-log = { workspace = true }
ic-cdk = { workspace = true }
ic-crypto-ed25519 = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-sha3 = "1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
serde-big-array = "0.5.1"
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
